@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lkre-model</artifactId>
+
+<configuration>
+    <fork>true</fork>
+    <compilerArgs>
+      <arg>--add-opens</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+    </compilerArgs>
+  </configuration>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
